--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,7 @@ grpcio==1.41.0
 gunicorn==20.1.0
 h5py==3.1.0
 html5lib==1.1
-idna @ 
+idna
 imbalanced-learn==0.8.1
 imblearn==0.0
 importlib-metadata 
